--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding = "Windows-1252"?>
+<?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.00"
+	Version="7.10"
 	Name="mapeditor"
 	ProjectGUID="{2610C66C-BB44-11D5-8156-00805F852A9B}"
 	Keyword="Win32Proj">
@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;&quot;$(SDL_image)&quot;;&quot;$(SDLmm)/src&quot;;&quot;$(SDL_mixer)&quot;;../../../libs/getopt"
+				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;&quot;$(SDL_image)&quot;;../../../libs/sdlmm/src;&quot;$(SDL_mixer)&quot;;../../../libs/getopt"
 				PreprocessorDefinitions="WIN32;_DEBUG;HEXAGON,_NOASM_,FREEMAPZOOM,NEWKEYB,_WIN32_,karteneditor,_SDL_"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
@@ -38,7 +38,7 @@
 				AdditionalDependencies="triangulate.lib libbzip2.lib sdlevent.lib SDL.lib SDLmain.lib SDLmm.lib SDL_image.lib SDL_mixer.lib"
 				OutputFile="$(OutDir)/bin/mapeditor.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="$(SDL_mixer)/lib;$(SDL)/lib;$(SDL_image)/lib;$(SDLmm)/lib;$(OutDir)/lib"
+				AdditionalLibraryDirectories="&quot;$(SDL_mixer)/lib&quot;;&quot;$(SDL)/lib&quot;;&quot;$(SDL_image)/lib&quot;;&quot;$(OutDir)/lib&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/bin/mapeditor.pdb"
 				SubSystem="2"
@@ -56,7 +56,13 @@
 			<Tool
 				Name="VCWebServiceProxyGeneratorTool"/>
 			<Tool
+				Name="VCXMLDataGeneratorTool"/>
+			<Tool
 				Name="VCWebDeploymentTool"/>
+			<Tool
+				Name="VCManagedWrapperGeneratorTool"/>
+			<Tool
+				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
@@ -112,9 +118,17 @@
 			<Tool
 				Name="VCWebServiceProxyGeneratorTool"/>
 			<Tool
+				Name="VCXMLDataGeneratorTool"/>
+			<Tool
 				Name="VCWebDeploymentTool"/>
+			<Tool
+				Name="VCManagedWrapperGeneratorTool"/>
+			<Tool
+				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
 		</Configuration>
 	</Configurations>
+	<References>
+	</References>
 	<Files>
 		<Filter
 			Name="Source Files"
@@ -281,9 +295,6 @@
 			</File>
 			<File
 				RelativePath="..\..\..\viewcalculation.cpp">
-			</File>
-			<File
-				RelativePath="..\..\..\weather.cpp">
 			</File>
 		</Filter>
 		<Filter
