--- a/source/libs/triangul/triangulate.vcproj
+++ b/source/libs/triangul/triangulate.vcproj
@@ -80,7 +80,10 @@
 				PreprocessorDefinitions="WIN32,_DEBUG,_WIN32_,_MSC_VER"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
+				RuntimeLibrary="3"
+				BufferSecurityCheck="FALSE"
 				DefaultCharIsUnsigned="TRUE"
+				RuntimeTypeInfo="TRUE"
 				PrecompiledHeaderFile=".\Debug/triangulate.pch"
 				AssemblerListingLocation=".\Debug/"
 				ObjectFile=".\Debug/"
