--- a/source/win32/msvc/jpeglib/jpeglib.vcproj
+++ b/source/win32/msvc/jpeglib/jpeglib.vcproj
@@ -22,6 +22,8 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
+				RuntimeLibrary="3"
+				RuntimeTypeInfo="TRUE"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="TRUE"
