--- a/source/win32/msvc/libbzip2/libbzip2.vcproj
+++ b/source/win32/msvc/libbzip2/libbzip2.vcproj
@@ -22,7 +22,8 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="0"
+				RuntimeLibrary="3"
+				RuntimeTypeInfo="TRUE"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="4"/>
