--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;&quot;$(SDL_image)&quot;;../../../libs/sdlmm/src;&quot;$(SDL_mixer)&quot;;../../../libs/getopt"
+				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;&quot;$(SDL_image)&quot;;../../../libs/sdlmm/src;&quot;$(SDL_mixer)&quot;;../../../libs/getopt;&quot;../../../libs/libsigc++&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;HEXAGON,_NOASM_,FREEMAPZOOM,NEWKEYB,_WIN32_,karteneditor,_SDL_"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
@@ -38,7 +38,7 @@
 				AdditionalDependencies="triangulate.lib libbzip2.lib sdlevent.lib SDL.lib SDLmain.lib SDLmm.lib SDL_image.lib SDL_mixer.lib"
 				OutputFile="$(OutDir)/bin/mapeditor.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(SDL_mixer)/lib&quot;;&quot;$(SDL)/lib&quot;;&quot;$(SDL_image)/lib&quot;;&quot;$(OutDir)/lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(SDL_mixer)/VisualC/Debug&quot;;&quot;$(SDL_image)/VisualC/Debug&quot;;../../../Debug/lib;&quot;../../../libs/libsigc++/sigc++/Debug&quot;;../../../libs/SDLmm/SDLmm/Debug;&quot;$(SDL)/VisualC/SDLmain/Debug&quot;;&quot;$(SDL)/VisualC/SDL/Debug&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/bin/mapeditor.pdb"
 				SubSystem="2"
@@ -78,7 +78,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="TRUE"
 				OptimizeForProcessor="2"
-				AdditionalIncludeDirectories="../.;$(SDL)/include;$(SDL_image)/include;$(SDLmm)/include;$(SDL_mixer)/include;../../../libs/getopt"
+				AdditionalIncludeDirectories="../.;&quot;$(SDL)/include&quot;;&quot;$(SDL_image)/include&quot;;&quot;$(SDL_mixer)&quot;;../../../libs/getopt;&quot;../../../libs/libsigc++&quot;;../../../libs/SDLmm/include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;HEXAGON,_NOASM_,FREEMAPZOOM,NEWKEYB,_WIN32_,karteneditor,_SDL_"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
@@ -98,7 +98,7 @@
 				AdditionalDependencies="triangulate.lib libbzip2.lib sdlevent.lib SDL.lib SDLmain.lib SDLmm.lib SDL_image.lib SDL_mixer.lib"
 				OutputFile="$(OutDir)/bin/mapeditor.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="$(SDL_mixer)/lib;$(SDL)/lib;$(SDL_image)/lib;$(SDLmm)/lib;$(OutDir)/lib"
+				AdditionalLibraryDirectories="&quot;$(SDL_mixer)/VisualC/Release&quot;;&quot;$(SDL_image)/VisualC/Release&quot;;../../../Release/lib;&quot;../../../libs/libsigc++/sigc++/release&quot;;../../../libs/SDLmm/SDLmm/release;&quot;$(SDL)/VisualC/SDLmain/Release&quot;;&quot;$(SDL)/VisualC/SDL/Release&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/bin/mapeditor.pdb"
 				SubSystem="2"
@@ -159,10 +159,16 @@
 				RelativePath="..\..\..\buildingtype.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\clipboard.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\CLoadable.cpp">
 			</File>
 			<File
 				RelativePath="..\..\..\containerbase.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\containerbasetype.cpp">
 			</File>
 			<File
 				RelativePath="..\..\..\dialog.cpp">
@@ -187,6 +193,15 @@
 			</File>
 			<File
 				RelativePath="..\..\..\edselfnt.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\gameevent_dialogs.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\gameevents.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\gameeventsystem.cpp">
 			</File>
 			<File
 				RelativePath="..\..\..\gamemap.cpp">
@@ -222,7 +237,16 @@
 				RelativePath="..\..\..\mapdisplay.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\mappolygons.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\messages.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\misc.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\music.cpp">
 			</File>
 			<File
 				RelativePath="..\..\..\Named.cpp">
@@ -252,6 +276,9 @@
 				RelativePath="..\..\..\pd.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\prehistoricevents.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\Property.cpp">
 			</File>
 			<File
@@ -267,16 +294,31 @@
 				RelativePath="..\..\..\sgstream.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\simplestream.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\sdl\sound.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\soundList.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\spfst.cpp">
 			</File>
 			<File
 				RelativePath="..\..\..\stack.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\stringtokenizer.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\strtmesg.cpp">
 			</File>
 			<File
 				RelativePath="..\..\..\terraintype.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\textfile_evaluation.cpp">
 			</File>
 			<File
 				RelativePath="..\..\..\textfileparser.cpp">
